--- a/index.html
+++ b/index.html
@@ -2,109 +2,144 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible"
-    content="IE=edge">
-    <meta name="viewport" 
-    content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Before/After Slider</title>
     <link rel="stylesheet" href="style.css">
-    </div>
     <style>
       *,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+      *::after,
+      *::before {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-iframe {
-  aspect-ratio: 16/9;
-}
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        justify-content: space-between;
+      }
 
-.video-container {
-  margin: 2rem;
-  max-height: 300px;
-}
+      main {
+        flex: 1;
+        display: grid;
+        place-items: center;
+        padding: 2rem;
+      }
 
-img {
-  display: block;
-  max-width: 100%;
-}
+      .container {
+        display: grid;
+        place-content: center;
+        position: relative;
+        overflow: hidden;
+        border-radius: 1rem;
+        width: 100%;
+        max-width: 800px;
+        aspect-ratio: 16/9;
+        background-color: #000;
+      }
 
-main {
-  display: grid;
-  place-items: center;
-  min-height: 100vh;
-}
+      .image-container {
+        position: relative;
+        width: 100%;
+        height: 100%;
+      }
 
-.container {
-  display: grid;
-  place-content: center;
-  position: relative;
-  overflow: hidden;
-  border-radius: 1rem;
-  --position: 50%;
-}
+      .slider-image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+      }
 
-.slider-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: left;
-}
+      .image-before {
+        position: absolute;
+        inset: 0;
+        width: var(--position);
+      }
 
-.image-before {
-  position: absolute;
-  inset: 0;
-  width: var(--position);
-}
+      .slider {
+        position: absolute;
+        inset: 0;
+        cursor: pointer;
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+      }
 
-.slider {
-  position: absolute;
-  inset: 0;
-  cursor: pointer;
-  opacity: 0;
-  /* for Firefox */
-  width: 100%;
-  height: 100%;
-}
+      .slider-line {
+        position: absolute;
+        inset: 0;
+        width: 0.2rem;
+        height: 100%;
+        background-color: #fff;
+        left: var(--position);
+        transform: translateX(-50%);
+        pointer-events: none;
+      }
 
-.slider:focus-visible ~ .slider-button {
-  outline: 5px solid black;
-  outline-offset: 3px;
-}
+      .slider-button {
+        position: absolute;
+        background-color: #fff;
+        color: black;
+        padding: 0.5rem;
+        border-radius: 100vw;
+        display: grid;
+        place-items: center;
+        top: 50%;
+        left: var(--position);
+        transform: translate(-50%, -50%);
+        pointer-events: none;
+        box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+      }
 
-.slider-line {
-  position: absolute;
-  inset: 0;
-  width: .2rem;
-  height: 100%;
-  background-color: #fff;
-  /* z-index: 10; */
-  left: var(--position);
-  transform: translateX(-50%);
-  pointer-events: none;
-}
+      header {
+        text-align: center;
+        margin-bottom: 2rem;
+      }
 
-.slider-button {
-  position: absolute;
-  background-color: #fff;
-  color: black;
-  padding: .5rem;
-  border-radius: 100vw;
-  display: grid;
-  place-items: center;
-  top: 50%;
-  left: var(--position);
-  transform: translate(-50%, -50%);
-  pointer-events: none;
-  /* z-index: 100; */
-  box-shadow: 1px 1px 1px hsl(0, 50%, 2%, .5);
-}
+      footer {
+        text-align: center;
+        padding: 1rem;
+        background-color: #222;
+        color: white;
+      }
+
+      footer a {
+        color: #ff8c00;
+        text-decoration: none;
+      }
+
+      /* Media Queries for Responsiveness */
+      @media (max-width: 1024px) {
+        .container {
+          aspect-ratio: 16/9; /* Adjust for tablets */
+        }
+      }
+
+      @media (max-width: 768px) {
+        .container {
+          aspect-ratio: 16/9;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .container {
+          aspect-ratio: 4/3; /* Adjust for small screens like smartphones */
+        }
+      }
     </style>
 </head>
 <body>
+
+  <header>
+    <h1>Retouching Portfolio</h1>
+  </header>
+
   <main>
     <div class="container">
       <div class="image-container">
@@ -112,32 +147,34 @@ main {
           class="image-before slider-image"
           src="./images/retouching1_before.jpg"
           alt="Before image"
-          />
+        />
         <img  
           class="image-after slider-image"
           src="./images/retouching1_after.jpg"
           alt="After image"
-          />
+        />
       </div>
       <input type="range" min="0" max="100"
       value="50" class="slider" aria-label="percentage of before photo shown"
       />
       <div class="slider-line"></div>
-      <div class="slider-button"
-      aria-hidden="true">
-      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000" viewBox="0 0 256 256"><path d="M136,40V216a8,8,0,0,1-16,0V40a8,8,0,0,1,16,0ZM96,120H35.31l18.35-18.34A8,8,0,0,0,42.34,90.34l-32,32a8,8,0,0,0,0,11.32l32,32a8,8,0,0,0,11.32-11.32L35.31,136H96a8,8,0,0,0,0-16Zm149.66,2.34-32-32a8,8,0,0,0-11.32,11.32L220.69,120H160a8,8,0,0,0,0,16h60.69l-18.35,18.34a8,8,0,0,0,11.32,11.32l32-32A8,8,0,0,0,245.66,122.34Z"></path></svg>
+      <div class="slider-button" aria-hidden="true">
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000" viewBox="0 0 256 256">
+          <path d="M136,40V216a8,8,0,0,1-16,0V40a8,8,0,0,1,16,0ZM96,120H35.31l18.35-18.34A8,8,0,0,0,42.34,90.34l-32,32a8,8,0,0,0,0,11.32l32,32a8,8,0,0,0,11.32-11.32L35.31,136H96a8,8,0,0,0,0-16Zm149.66,2.34-32-32a8,8,0,0,0-11.32,11.32L220.69,120H160a8,8,0,0,0,0,16h60.69l-18.35,18.34a8,8,0,0,0,11.32,11.32l32-32A8,8,0,0,0,245.66,122.34Z"></path>
+        </svg>
       </div>
     </div>
-    </div>
   </main>
-</body>
-<footer>
-    <p>Contact me at <a href="mailto:phoenixfusion2025@gmail.com" style="color: white;">phoenixfusion2025@gmail.com</a></p>
-</footer>
+
+  <footer>
+    <p>Contact me at <a href="mailto:phoenixfusion2025@gmail.com" style="color: black;">phoenixfusion2025@gmail.com</a></p>
+  </footer>
+
   <script>
     const container = document.querySelector('.container');
-document.querySelector('.slider').addEventListener('input', (e) => {
-  container.style.setProperty('--position', `${e.target.value}%`);
-})
+    document.querySelector('.slider').addEventListener('input', (e) => {
+      container.style.setProperty('--position', `${e.target.value}%`);
+    })
   </script>
+</body>
 </html>
