--- a/index.html
+++ b/index.html
@@ -2,10 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible"
+    content="IE=edge">
+    <meta name="viewport" 
+    content="width=device-width, initial-scale=1.0">
     <title>Before/After Slider</title>
-    <style>
+    <link rel="stylesheet" href="style.css">
+    </div>
+  <title>Retouching Portfolio</title>
+<style>
+      *,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+iframe {
+  aspect-ratio: 16/9;
+}
+
+.video-container {
+  margin: 2rem;
+  max-height: 300px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+main {
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
+}
+
 .container {
   display: grid;
   place-content: center;
@@ -15,112 +48,117 @@
   width: 100%;
   max-width: 800px;
   aspect-ratio: 16/9;
-  background-color: #000; /* Ensures visibility of the container */
-}
-
-.image-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
+  background-color: #000;  --position: 50%;
 }
 
 .slider-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center;
+  object-position: left;
 }
 
 .image-before {
   position: absolute;
   inset: 0;
   width: var(--position);
-  transition: width 0.2s ease;
-  z-index: 2;
 }
 
-.image-after {
+.slider {
   position: absolute;
   inset: 0;
+  cursor: pointer;
+  opacity: 0;
+  /* for Firefox */
   width: 100%;
-  z-index: 1;
+  height: 100%;
 }
 
-    </style>
+.slider:focus-visible ~ .slider-button {
+  outline: 5px solid black;
+  outline-offset: 3px;
+}
+
+.slider-line {
+  position: absolute;
+  inset: 0;
+  width: .2rem;
+  height: 100%;
+  background-color: #fff;
+  /* z-index: 10; */
+  left: var(--position);
+  transform: translateX(-50%);
+  pointer-events: none;
+}
+
+.slider-button {
+  position: absolute;
+  background-color: #fff;
+  color: black;
+  padding: .5rem;
+  border-radius: 100vw;
+  display: grid;
+  place-items: center;
+  top: 50%;
+  left: var(--position);
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  /* z-index: 100; */
+  box-shadow: 1px 1px 1px hsl(0, 50%, 2%, .5);
+}
+header {
+    text-align: center;
+    margin-bottom: 2rem;
+      }
+
+footer {
+    text-align: center;
+    padding: 1rem;
+    background-color: #222;
+    color: white;
+}
+
+footer a {
+    color: #ff8c00;
+    text-decoration: none;
+}
+    
+</style>
 </head>
 <body>
-
-  <header>
-    <h1>Retouching Portfolio</h1>
-  </header>
-
   <main>
     <div class="container">
       <div class="image-container">
         <img 
           class="image-before slider-image"
-          src="/images/retouching1_before.jpg"
+          src="./images/retouching1_before.jpg"
           alt="Before image"
-        />
+          />
         <img  
           class="image-after slider-image"
-          src="/images/retouching1_after.jpg"
+          src="./images/retouching1_after.jpg"
           alt="After image"
-        />
+          />
       </div>
       <input type="range" min="0" max="100"
       value="50" class="slider" aria-label="percentage of before photo shown"
       />
       <div class="slider-line"></div>
-      <div class="slider-button" aria-hidden="true">
-        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000" viewBox="0 0 256 256">
-          <path d="M136,40V216a8,8,0,0,1-16,0V40a8,8,0,0,1,16,0ZM96,120H35.31l18.35-18.34A8,8,0,0,0,42.34,90.34l-32,32a8,8,0,0,0,0,11.32l32,32a8,8,0,0,0,11.32-11.32L35.31,136H96a8,8,0,0,0,0-16Zm149.66,2.34-32-32a8,8,0,0,0-11.32,11.32L220.69,120H160a8,8,0,0,0,0,16h60.69l-18.35,18.34a8,8,0,0,0,11.32,11.32l32-32A8,8,0,0,0,245.66,122.34Z"></path>
-        </svg>
+      <div class="slider-button"
+      aria-hidden="true">
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000" viewBox="0 0 256 256"><path d="M136,40V216a8,8,0,0,1-16,0V40a8,8,0,0,1,16,0ZM96,120H35.31l18.35-18.34A8,8,0,0,0,42.34,90.34l-32,32a8,8,0,0,0,0,11.32l32,32a8,8,0,0,0,11.32-11.32L35.31,136H96a8,8,0,0,0,0-16Zm149.66,2.34-32-32a8,8,0,0,0-11.32,11.32L220.69,120H160a8,8,0,0,0,0,16h60.69l-18.35,18.34a8,8,0,0,0,11.32,11.32l32-32A8,8,0,0,0,245.66,122.34Z"></path></svg>
       </div>
     </div>
+    </div>
   </main>
-
-  <footer>
-    <p>Contact me at <a href="mailto:phoenixfusion2025@gmail.com" style="color: white;">phoenixfusion2025@gmail.com</a></p>
-  </footer>
-
-  <script>
-const container = document.querySelector('.container');
-const slider = document.querySelector('.slider');
-const sliderLine = document.querySelector('.slider-line');
-const sliderButton = document.querySelector('.slider-button');
-
-slider.addEventListener('input', (e) => {
-  const value = e.target.value;
-
-  // Set the width of the before image and the slider line/button position
-  container.style.setProperty('--position', `${value}%`);
-  sliderLine.style.left = `${value}%`;
-  sliderButton.style.left = `${value}%`;
-});
-
-slider.addEventListener('mousedown', (e) => {
-  // Start the dragging functionality
-  e.preventDefault(); // Prevent text selection while dragging
-  const sliderWidth = slider.offsetWidth;
-
-  const moveSlider = (moveEvent) => {
-    let newValue = ((moveEvent.clientX - slider.getBoundingClientRect().left) / sliderWidth) * 100;
-    newValue = Math.min(100, Math.max(0, newValue)); // Ensure the value stays between 0 and 100
-    slider.value = newValue;
-    container.style.setProperty('--position', `${newValue}%`);
-    sliderLine.style.left = `${newValue}%`;
-    sliderButton.style.left = `${newValue}%`;
-  };
-
-  const stopDrag = () => {
-    document.removeEventListener('mousemove', moveSlider);
-    document.removeEventListener('mouseup', stopDrag);
-  };
-
-  document.addEventListener('mousemove', moveSlider);
-  document.addEventListener('mouseup', stopDrag);
-});
-  </script>
 </body>
+<footer>
+    <p>Contact me at <a href="mailto:phoenixfusion2025@gmail.com" style="color: black;">phoenixfusion2025@gmail.com</a></p>
+</footer>
+  <script>
+    const container = document.querySelector('.container');
+document.querySelector('.slider').addEventListener('input', (e) => {
+  container.style.setProperty('--position', ${e.target.value}%);
+})
+  </script>
 </html>
