--- a/index.html
+++ b/index.html
@@ -19,20 +19,24 @@
   box-sizing: border-box;
 }
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    justify-content: space-between;
+iframe {
+  aspect-ratio: 16/9;
 }
-    
+
+.video-container {
+  margin: 2rem;
+  max-height: 300px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
 main {
-  flex: 1;
   display: grid;
   place-items: center;
-  min-height: 2rem;
+  min-height: 100vh;
 }
 
 .container {
@@ -41,23 +45,14 @@ main {
   position: relative;
   overflow: hidden;
   border-radius: 1rem;
-  width: 100%;
-  max-width: 800px;
-  aspect-ratio: 16/9;
-  background-color: #000;
+  --position: 50%;
 }
 
-.image-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-    
 .slider-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center;
+  object-position: left;
 }
 
 .image-before {
@@ -106,45 +101,10 @@ main {
   transform: translate(-50%, -50%);
   pointer-events: none;
   /* z-index: 100; */
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, .5);
+  box-shadow: 1px 1px 1px hsl(0, 50%, 2%, .5);
 }
-header {
-    text-align: center;
-    margin-bottom: 2rem;
-}
-
-  footer {
-    text-align: center;
-    padding: 1rem;
-    background-color: #222;
-    color: white;
-  }
-   footer a {
-        color: #ff8c00;
-        text-decoration: none;
-      }
-
-      /* Media Queries for Responsiveness */
-      @media (max-width: 1024px) {
-        .container {
-          aspect-ratio: 16/9; /* Adjust for tablets */
-        }
-      }
-
-      @media (max-width: 768px) {
-        .container {
-          aspect-ratio: 16/9;
-        }
-      }
-
-      @media (max-width: 480px) {
-        .container {
-          aspect-ratio: 4/3; /* Adjust for small screens like smartphones */
-        }
-      }
-</style>
+    </style>
 </head>
-
 <body>
   <main>
     <div class="container">
@@ -166,22 +126,19 @@ header {
       <div class="slider-line"></div>
       <div class="slider-button"
       aria-hidden="true">
-      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000" viewBox="0 0 256 256">
-          <path d="M136,40V216a8,8,0,0,1-16,0V40a8,8,0,0,1,16,0ZM96,120H35.31l18.35-18.34A8,8,0,0,0,42.34,90.34l-32,32a8,8,0,0,0,0,11.32l32,32a8,8,0,0,0,11.32-11.32L35.31,136H96a8,8,0,0,0,0-16Zm149.66,2.34-32-32a8,8,0,0,0-11.32,11.32L220.69,120H160a8,8,0,0,0,0,16h60.69l-18.35,18.34a8,8,0,0,0,11.32,11.32l32-32A8,8,0,0,0,245.66,122.34Z"></path>
-      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000" viewBox="0 0 256 256"><path d="M136,40V216a8,8,0,0,1-16,0V40a8,8,0,0,1,16,0ZM96,120H35.31l18.35-18.34A8,8,0,0,0,42.34,90.34l-32,32a8,8,0,0,0,0,11.32l32,32a8,8,0,0,0,11.32-11.32L35.31,136H96a8,8,0,0,0,0-16Zm149.66,2.34-32-32a8,8,0,0,0-11.32,11.32L220.69,120H160a8,8,0,0,0,0,16h60.69l-18.35,18.34a8,8,0,0,0,11.32,11.32l32-32A8,8,0,0,0,245.66,122.34Z"></path></svg>
       </div>
     </div>
     </div>
   </main>
-
+</body>
 <footer>
     <p>Contact me at <a href="mailto:phoenixfusion2025@gmail.com" style="color: black;">phoenixfusion2025@gmail.com</a></p>
 </footer>
   <script>
     const container = document.querySelector('.container');
 document.querySelector('.slider').addEventListener('input', (e) => {
-  container.style.setProperty('--position', ${e.target.value}%);
+  container.style.setProperty('--position', '${e.target.value}%');
 })
   </script>
-</body>
 </html>
