--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
         border-radius: 1rem;
         width: 100%;
         max-width: 800px;
-        aspect-ratio: 16/9;
+        aspect-ratio: 2/3; /* Set the 2:3 aspect ratio */
         background-color: #000;
+        height: 600px; /* Explicit height for the container */
         box-sizing: border-box;
       }
 
@@ -53,7 +54,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        object-position: center;
+        object-position: center; /* Center the image */
       }
 
       .image-before {
@@ -123,19 +124,19 @@
       /* Media Queries for Responsiveness */
       @media (max-width: 1024px) {
         .container {
-          aspect-ratio: 16/9; /* Adjust for tablets */
+          aspect-ratio: 2/3; /* Adjust for tablets */
         }
       }
 
       @media (max-width: 768px) {
         .container {
-          aspect-ratio: 16/9;
+          aspect-ratio: 2/3;
         }
       }
 
       @media (max-width: 480px) {
         .container {
-          aspect-ratio: 4/3; /* Adjust for small screens like smartphones */
+          aspect-ratio: 2/3; /* Adjust for small screens like smartphones */
         }
       }
     </style>
@@ -149,7 +150,7 @@
   <main>
     <div class="container">
       <div class="image-container">
-        <!-- Use full URLs for the images -->
+        <!-- Use the absolute URL for the images -->
         <img 
           class="image-before slider-image"
           src="https://phoenixphotography.github.io/Before-After/images/retouching1_before.jpg"
