--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         border-radius: 1rem;
         width: 100%;
         max-width: 800px;
-        aspect-ratio: 2/3; /* Set the 2:3 aspect ratio */
-        height: 600px; /* Explicit height for the container */
+        aspect-ratio: 2/3;
+        height: 600px; /* Explicit height */
         background-color: #000;
         box-sizing: border-box;
       }
@@ -54,7 +54,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        object-position: center; /* Center the image */
+        object-position: center;
       }
 
       .image-before {
@@ -103,7 +103,7 @@
         display: grid;
         place-items: center;
         top: 50%;
-        left: 50%; /* Start the slider button in the center */
+        left: 50%;
         transform: translate(-50%, -50%);
         pointer-events: none;
         box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
@@ -121,24 +121,6 @@
         text-decoration: none;
       }
 
-      /* Media Queries for Responsiveness */
-      @media (max-width: 1024px) {
-        .container {
-          aspect-ratio: 2/3; /* Adjust for tablets */
-        }
-      }
-
-      @media (max-width: 768px) {
-        .container {
-          aspect-ratio: 2/3;
-        }
-      }
-
-      @media (max-width: 480px) {
-        .container {
-          aspect-ratio: 2/3; /* Adjust for small screens like smartphones */
-        }
-      }
     </style>
 </head>
 <body>
@@ -150,7 +132,7 @@
   <main>
     <div class="container">
       <div class="image-container">
-        <!-- Full image URLs for the images -->
+        <!-- Use the full URL for the images -->
         <img 
           class="image-before slider-image"
           src="https://phoenixphotography.github.io/Before-After/images/retouching1_before.jpg"
