--- a/index.html
+++ b/index.html
@@ -5,128 +5,42 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Before/After Slider</title>
+ 
   <style>
-    *,
-    *::after,
-    *::before {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      justify-content: space-between;
-    }
-
-    main {
-      flex: 1;
-      display: grid;
-      place-items: center;
-      padding: 2rem;
-    }
-
-    .container {
-      /* 1) Initialize the CSS var so you see half/half on load */
-      --position: 50%;
-      
-      position: relative;
-      overflow: hidden;
-      border-radius: 1rem;
-      width: 100%;
-      max-width: 800px;
-      aspect-ratio: 2/3;
-      height: 600px;
-      background-color: #000;
-    }
-
-    .image-container {
-      position: relative;
-      width: 100%;
-      height: 100%;
-    }
-
-    .slider-image {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-    }
-
-    .image-before {
-      position: absolute;
-      inset: 0;
-      /* 2) Drive width from --position */
-      width: var(--position);
-      transition: width 0.2s ease;
-      z-index: 2;
-    }
-
-    .image-after {
-      position: absolute;
-      inset: 0;
-      width: 100%;
-      z-index: 1;
-    }
-
-    .slider {
-      position: absolute;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      cursor: pointer;
-      opacity: 0;           /* hide native track/thumb */
-      width: 100%;
-      height: 100%;
-    }
-
-    .slider-line {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      /* 2) Move line with --position */
-      left: var(--position);
-      transform: translateX(-50%);
-      width: 0.2rem;
-      background-color: #fff;
-      pointer-events: none;
-      /* 3) Above .image-before */
-      z-index: 3;
-    }
-
-    .slider-button {
-      position: absolute;
-      top: 50%;
-      /* 2) Move button with --position */
-      left: var(--position);
-      transform: translate(-50%, -50%);
-      background-color: #fff;
-      padding: 0.5rem;
-      border-radius: 100vw;
-      display: grid;
-      place-items: center;
-      pointer-events: none;
-      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-      /* 3) Above .image-before */
-      z-index: 3;
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background-color: #222;
-      color: white;
-    }
-
-    footer a {
-      color: white;
-    }
+.slider {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  margin: 0; padding: 0;
+  background: transparent;
+  cursor: ew-resize;
+  -webkit-appearance: none;
+  appearance: none;
+  z-index: 4;            /* on top of the images */
+}
+/* WebKit/Blink */
+.slider::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+}
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 0; height: 0;   /* hide native thumb */
+}
+/* Firefox */
+.slider::-moz-range-track {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+}
+.slider::-moz-range-thumb {
+  width: 0; height: 0;
+  border: none;
+}
 
   </style>
+  
 </head>
 <body>
 
@@ -170,16 +84,22 @@
     </p>
   </footer>
 
-  <script>
-    const slider = document.querySelector('.slider');
-    const container = document.querySelector('.container');
+<script>
+  const beforeImg    = document.querySelector('.image-before');
+  const sliderLine   = document.querySelector('.slider-line');
+  const sliderButton = document.querySelector('.slider-button');
+  const range        = document.querySelector('.slider');
 
-    slider.addEventListener('input', e => {
-      container.style.setProperty('--position', e.target.value + '%');
-    });
-    
-    // optional: initialize on load
-    container.style.setProperty('--position', slider.value + '%');
-  </script>
+  function update(val) {
+    beforeImg.style.width      = val + '%';
+    sliderLine.style.left      = val + '%';
+    sliderButton.style.left    = val + '%';
+  }
+
+  // when you drag…
+  range.addEventListener('input', e => update(e.target.value));
+  // initialize on load
+  update(range.value);
+</script>
 </body>
 </html>
