--- a/index.html
+++ b/index.html
@@ -5,45 +5,108 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Before/After Slider</title>
- 
   <style>
-.slider {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  margin: 0; padding: 0;
-  background: transparent;
-  cursor: ew-resize;
-  -webkit-appearance: none;
-  appearance: none;
-  z-index: 4;            /* on top of the images */
-}
-/* WebKit/Blink */
-.slider::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 100%;
-  background: transparent;
-}
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  width: 0; height: 0;   /* hide native thumb */
-}
-/* Firefox */
-.slider::-moz-range-track {
-  width: 100%;
-  height: 100%;
-  background: transparent;
-}
-.slider::-moz-range-thumb {
-  width: 0; height: 0;
-  border: none;
-}
+    /* Reset & base */
+    *, *::before, *::after {
+      margin: 0; padding: 0; box-sizing: border-box;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      display: flex; flex-direction: column; min-height: 100vh;
+    }
+    header, footer {
+      text-align: center; padding: 1rem; background: #222; color: #fff;
+    }
+    main {
+      flex: 1; display: grid; place-items: center; padding: 2rem;
+    }
 
+    /* Container & images */
+    .container {
+      position: relative;
+      overflow: hidden;
+      border-radius: 1rem;
+      width: 100%;
+      max-width: 800px;
+      aspect-ratio: 2/3;
+      height: 600px;
+      background: #000;
+    }
+    .image-container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+    .slider-image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+    .image-after {
+      position: absolute;
+      inset: 0;
+      z-index: 1;
+    }
+    .image-before {
+      position: absolute;
+      inset: 0;
+      width: 50%;                  /* start mid-split */
+      transition: width 0.2s ease;
+      z-index: 2;
+    }
+
+    /* Hidden native range */
+    .slider {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      margin: 0; background: transparent;
+      cursor: ew-resize;
+      z-index: 4;
+      -webkit-appearance: none;
+      appearance: none;
+    }
+    .slider::-webkit-slider-runnable-track {
+      width: 100%; height: 100%; background: transparent;
+    }
+    .slider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      width: 0; height: 0;
+    }
+    .slider::-moz-range-track {
+      width: 100%; height: 100%; background: transparent;
+    }
+    .slider::-moz-range-thumb {
+      width: 0; height: 0; border: none;
+    }
+
+    /* Custom line & handle */
+    .slider-line {
+      position: absolute;
+      top: 0; height: 100%;
+      width: 0.2rem;
+      background: #fff;
+      left: 50%; transform: translateX(-50%);
+      pointer-events: none;
+      z-index: 3;
+    }
+    .slider-button {
+      position: absolute;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      background: #fff;
+      padding: 0.5rem;
+      border-radius: 50%;
+      display: grid; place-items: center;
+      pointer-events: none;
+      box-shadow: 1px 1px 4px rgba(0,0,0,0.5);
+      z-index: 3;
+    }
   </style>
-  
 </head>
 <body>
-
   <header>
     <h1>Retouching Portfolio</h1>
   </header>
@@ -52,20 +115,20 @@
     <div class="container">
       <div class="image-container">
         <img
-          class="image-before slider-image"
-          src="https://phoenixphotography.github.io/Before-After/images/retouching1_before.jpg"
-          alt="Before"
-        />
-        <img
-          class="image-after slider-image"
+          class="slider-image image-after"
           src="https://phoenixphotography.github.io/Before-After/images/retouching1_after.jpg"
           alt="After"
+        />
+        <img
+          class="slider-image image-before"
+          src="https://phoenixphotography.github.io/Before-After/images/retouching1_before.jpg"
+          alt="Before"
         />
       </div>
 
       <input
         type="range" min="0" max="100" value="50"
-        class="slider" aria-label="percentage of before photo shown"
+        class="slider" aria-label="Before/after slider"
       />
 
       <div class="slider-line"></div>
@@ -80,26 +143,28 @@
   <footer>
     <p>
       Contact me at
-      <a href="mailto:phoenixfusion2025@gmail.com">phoenixfusion2025@gmail.com</a>
+      <a href="mailto:phoenixfusion2025@gmail.com" style="color:#fff;">
+        phoenixfusion2025@gmail.com
+      </a>
     </p>
   </footer>
 
-<script>
-  const beforeImg    = document.querySelector('.image-before');
-  const sliderLine   = document.querySelector('.slider-line');
-  const sliderButton = document.querySelector('.slider-button');
-  const range        = document.querySelector('.slider');
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const range = document.querySelector('.slider');
+      const before = document.querySelector('.image-before');
+      const line   = document.querySelector('.slider-line');
+      const handle = document.querySelector('.slider-button');
 
-  function update(val) {
-    beforeImg.style.width      = val + '%';
-    sliderLine.style.left      = val + '%';
-    sliderButton.style.left    = val + '%';
-  }
+      function update(pos) {
+        before.style.width = pos + '%';
+        line.style.left    = pos + '%';
+        handle.style.left  = pos + '%';
+      }
 
-  // when you drag…
-  range.addEventListener('input', e => update(e.target.value));
-  // initialize on load
-  update(range.value);
-</script>
+      range.addEventListener('input', e => update(e.target.value));
+      update(range.value); // initialize
+    });
+  </script>
 </body>
 </html>
